@@ -263,14 +263,22 @@ test lmdb-2.17 {Cursor get, UTF8} {*}{
     -result {這是值}
 }
 
-test lmdb-2.18 {Cursor close} {*}{
+test lmdb-2.18 {Cursor getBinary, UTF8} {*}{
+    -body {
+        set data [lindex [dbi0.c0 getBinary -set "這是鍵"] 1]
+        encoding convertfrom utf-8 $data
+    }
+    -result {這是值}
+}
+
+test lmdb-2.19 {Cursor close} {*}{
     -body {
     dbi0.c0 close
     }
     -result {0}
 }
 
-test lmdb-2.19 {Delete, wrong # args} {*}{
+test lmdb-2.20 {Delete, wrong # args} {*}{
     -body {
     dbi0 del "1234" "567890" -txn
     }
@@ -279,7 +287,7 @@ test lmdb-2.19 {Delete, wrong # args} {*}{
     -result {wrong # args*}
 }
 
-test lmdb-2.20 {Delete, wrong # args} {*}{
+test lmdb-2.21 {Delete, wrong # args} {*}{
     -body {
     dbi0 del "1234" "567890" -test env0.txn0 -txn
     }
@@ -288,14 +296,14 @@ test lmdb-2.20 {Delete, wrong # args} {*}{
     -result {wrong # args*}
 }
 
-test lmdb-2.21 {Delete} {*}{
+test lmdb-2.22 {Delete} {*}{
     -body {
     dbi0 del "1234" "" -txn env0.txn0
     }
     -result {0}
 }
 
-test lmdb-2.22 {Drop, wrong # args} {*}{
+test lmdb-2.23 {Drop, wrong # args} {*}{
     -body {
     dbi0 drop "mytest" -txn env0.txn0
     }
@@ -304,21 +312,21 @@ test lmdb-2.22 {Drop, wrong # args} {*}{
     -result {expected integer*}
 }
 
-test lmdb-2.23 {Drop} {*}{
+test lmdb-2.24 {Drop} {*}{
     -body {
     dbi0 drop 0 -txn env0.txn0
     }
     -result {0}
 }
 
-test lmdb-2.24 {Commit} {*}{
+test lmdb-2.25 {Commit} {*}{
     -body {
     env0.txn0 commit
     }
     -result {0}
 }
 
-test lmdb-2.25 {UTF8} {*}{
+test lmdb-2.26 {UTF8} {*}{
     -body {
     set k {Linn‘us}
     set v {ℕ ⊆ ℕ₀ ⊂ ℤ ⊂ ℚ ⊂ ℝ ⊂ ℂ}
@@ -334,7 +342,7 @@ test lmdb-2.25 {UTF8} {*}{
     } -result 0
 }
 
-test lmdb-2.26 {Binary key and value} {*}{
+test lmdb-2.27 {Binary key and value} {*}{
     -body {
     # generate 255 random bytes
     for {set i 1} {$i < 256} {incr i} {
